07.MONITORING/ingress.alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alertmanager.tbiz-atcl.net
    http:
      paths:
        - path: /
          backend:
            serviceName: prometheus-alertmanager
            servicePort: 80
